# Prologue

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Prologue.sln  README.md
.github/workflows/: ci.yml  release.yml
Prologue/: Prologue.vcxproj  Prologue.vcxproj.filters
Prologue/Application/: make-release-zip.ps1  prologue.settings.json
Prologue/Application/Prologue/: prologue.settings.description.json  prologue.settings.json
Prologue/Application/Prologue-For-Zip/: prologue.settings.description.json  prologue.settings.json
Prologue/Application/input/airspeed_param/: sample.csv
Prologue/Application/input/json/: description.json  spec_multi.json  spec_single.json
Prologue/docs/: DEVELOP.md  DYNAMICS.md
Prologue/src/: Air.cpp  Air.h  AirspeedParam.cpp  AirspeedParam.h  Algorithm.cpp  Algorithm.h  AppSetting.cpp  AppSetting.h  CommandLine.cpp  CommandLine.h  Constant.h  Engine.cpp  Engine.h  Gnuplot.cpp  Gnuplot.h  JsonUtils.cpp  JsonUtils.h  MapFeature.cpp  MapFeature.h  Prologue.cpp  Quaternion.cpp  Quaternion.h  ResultSaver.cpp  ResultSaver.h  Rocket.h  RocketSpec.h  RocketSpecReader.cpp  RocketSpecReader.h  Simulator.cpp  Simulator.h  Solver.cpp  Solver.h  SpecJson.h  SpecJsonReader.cpp  SpecJsonReader.h  Vector3D.cpp  Vector3D.h
application/: prologue.settings.json
application/input/aero_coef/: sample.csv
application/input/airspeed_param/: sample.csv
application/input/json/: spec_multi.json  spec_single.json
application/input/map/: README.md  config.json
application/input/spec/: obog.json  spec_multi.json  spec_single.json
application/input/thrust/: Sample_G40-4W.txt
application/input/wind/: wind_data_template.csv
docs/: DEVELOP.md  DEVELOPMENT.md  DYNAMICS.md  INPUT.md  SOURCE.md
src/: main.cpp
src/app/: AppSetting.cpp  AppSetting.hpp  CommandLine.cpp  CommandLine.hpp  FetchVersion.cpp  FetchVersion.hpp  Option.cpp  Option.hpp
src/dynamics/: Air.cpp  Air.hpp  WindModel.cpp  WindModel.hpp
src/env/: Environment.cpp  Environment.hpp  GeoCoordinate.cpp  GeoCoordinate.hpp  Map.cpp  Map.hpp  MapCoordinate.hpp  MapFeature.cpp  MapFeature.hpp  MapType.hpp
src/gnuplot/: Gnuplot.cpp  Gnuplot.hpp  GnuplotController.hpp
src/gnuplot/plotter/: IPlotter.cpp  IPlotter.hpp  Plotter2D.cpp  Plotter2D.hpp  Plotter3D.cpp  Plotter3D.hpp  PlotterBase.hpp
src/math/: Algorithm.cpp  Algorithm.hpp  Quaternion.cpp  Quaternion.hpp  Vector3D.cpp  Vector3D.hpp
src/misc/: Constant.hpp  Platform.hpp
src/result/: ResultSaver.cpp  ResultSaver.hpp  SimuResult.cpp  SimuResult.hpp
src/rocket/: AeroCoefficient.cpp  AeroCoefficient.hpp  AirspeedParam.cpp  AirspeedParam.hpp  Engine.cpp  Engine.hpp  Rocket.hpp  RocketSpec.cpp  RocketSpec.hpp
src/simulator/: DetailSimulator.cpp  DetailSimulator.hpp  ScatterSimulator.cpp  ScatterSimulator.hpp  Simulator.cpp  Simulator.hpp  SimulatorBase.cpp  SimulatorBase.hpp  SimulatorFactory.cpp  SimulatorFactory.hpp
src/solver/: DetailSimulator.cpp  DetailSimulator.hpp  ScatterSimulator.cpp  ScatterSimulator.hpp  Simulator.cpp  Simulator.hpp  Solver.cpp  Solver.hpp
src/utils/: JsonUtils.cpp  JsonUtils.hpp  ResultSaver.cpp  ResultSaver.hpp  RocketSpecReader.cpp  RocketSpecReader.hpp
test/: CMakeLists.txt
test/math/: Algorithm.cpp  Quaternion.cpp  Vector3D.cpp
(+7 files in other folders)
